--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
         </div>
     </div>
     <script src="./script.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="./server.js"></script>
 </body>
 
